Add CounterFragment and Logger

--- a/app/src/main/res/layout/fragment_category.xml
+++ b/app/src/main/res/layout/fragment_category.xml
@@ -25,37 +25,11 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent">
 
-            <androidx.appcompat.widget.LinearLayoutCompat
-                android:id="@+id/counterLayout"
+            <androidx.fragment.app.FragmentContainerView
+                android:id="@+id/counterFragment"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:gravity="center"
-                android:orientation="horizontal">
-
-                <com.google.android.material.button.MaterialButton
-                    android:id="@+id/minusButton"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    style="@style/Widget.MaterialComponents.Button.TextButton"
-                    android:text="-"
-                    android:layout_weight="1" />
-
-                <TextView
-                    android:id="@+id/valueTextView"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:layout_weight="1"
-                    android:text="0" />
-
-                <com.google.android.material.button.MaterialButton
-                    android:id="@+id/plusButton"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    style="@style/Widget.MaterialComponents.Button.TextButton"
-                    android:text="+"
-                    android:layout_weight="1" />
-            </androidx.appcompat.widget.LinearLayoutCompat>
+                android:name="cz.johnyapps.cheers.counter.CounterFragment" />
         </com.google.android.material.card.MaterialCardView>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
