--- a/app/src/main/res/layout/fragment_counter.xml
+++ b/app/src/main/res/layout/fragment_counter.xml
@@ -8,11 +8,17 @@
         <androidx.appcompat.widget.LinearLayoutCompat
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@{counter.beverage.color}"
             android:orientation="vertical">
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:text="@{counter.beverage.name}"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="8dp"
+                android:textColor="@{counter.beverage.textColor}"
                 android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />
 
             <androidx.appcompat.widget.LinearLayoutCompat
@@ -27,7 +33,7 @@
                     style="@style/Widget.MaterialComponents.Button.TextButton"
                     android:text="@string/minus"
                     android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
-                    android:textColor="?colorOnSurface"
+                    android:textColor="@{counter.beverage.textColor}"
                     android:layout_weight="3" />
 
                 <TextView
@@ -38,7 +44,7 @@
                     android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
                     android:text="@string/zero"
                     android:gravity="center"
-                    android:textColor="?colorOnSurface" />
+                    android:textColor="@{counter.beverage.textColor}" />
 
                 <com.google.android.material.button.MaterialButton
                     android:id="@+id/plusButton"
@@ -47,9 +53,15 @@
                     style="@style/Widget.MaterialComponents.Button.TextButton"
                     android:text="@string/plus"
                     android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
-                    android:textColor="?colorOnSurface"
+                    android:textColor="@{counter.beverage.textColor}"
                     android:layout_weight="3" />
             </androidx.appcompat.widget.LinearLayoutCompat>
         </androidx.appcompat.widget.LinearLayoutCompat>
     </com.google.android.material.card.MaterialCardView>
+
+    <data>
+        <variable
+            name="counter"
+            type="cz.johnyapps.cheers.counter.dto.CounterEntity" />
+    </data>
 </layout>
