--- a/app/src/main/res/drawable/ic_beer.xml
+++ b/app/src/main/res/drawable/ic_beer.xml
@@ -1,8 +1,56 @@
-<vector android:height="200dp"
-    android:tint="?attr/colorOnSurface"
-    android:viewportHeight="24"
-    android:viewportWidth="24"
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="200dp"
-    xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="@android:color/white" android:pathData="M19,9h-1.56C17.79,8.41 18,7.73 18,7c0,-2.21 -1.79,-4 -4,-4c-0.34,0 -0.66,0.05 -0.98,0.13C12.2,2.45 11.16,2.02 10,2.02c-1.89,0 -3.51,1.11 -4.27,2.71C4.15,5.26 3,6.74 3,8.5c0,1.86 1.28,3.41 3,3.86L6,21h11v-2h2c1.1,0 2,-0.9 2,-2v-6C21,9.9 20.1,9 19,9zM7,10.5c-1.1,0 -2,-0.9 -2,-2c0,-0.85 0.55,-1.6 1.37,-1.88l0.8,-0.27l0.36,-0.76C8,4.62 8.94,4.02 10,4.02c0.79,0 1.39,0.35 1.74,0.65l0.78,0.65c0,0 0.64,-0.32 1.47,-0.32c1.1,0 2,0.9 2,2c0,0 -3,0 -3,0C9.67,7 9.15,10.5 7,10.5zM19,17h-2v-6h2V17z"/>
+    android:height="200dp"
+    android:viewportWidth="200"
+    android:viewportHeight="200">
+    <path
+        android:pathData="m28.061,28.58v71.42,35.71c0,0 -0.272,35.71 13.148,35.71h13.148,26.296 26.296,13.148c13.42,0 13.148,-35.71 13.148,-35.71L133.245,100 133.245,28.58ZM133.606,51.543v83.828h19.167c13.216,0 17.327,-7.857 19.167,-20.957L171.941,93.457 171.941,51.543Z"
+        android:strokeLineJoin="round"
+        android:strokeWidth="16.1188"
+        android:fillColor="#00000000"
+        android:strokeColor="#ffffff"
+        android:strokeLineCap="round"/>
+    <path
+        android:pathData="m28.06,62.727v37.274,35.71c0,0 -0.272,35.71 13.148,35.71h13.148,26.296 26.296,13.148c13.42,0 13.148,-35.71 13.148,-35.71L133.245,100 133.245,62.727Z"
+        android:strokeLineJoin="round"
+        android:strokeWidth="0"
+        android:fillColor="#ffae00"
+        android:strokeColor="#00000000"
+        android:strokeLineCap="round"/>
+    <path
+        android:pathData="m28.06,62.727v37.274,35.71c0,0 -0.272,35.71 13.148,35.71h13.148,26.296 26.296,13.148c13.42,0 13.148,-35.71 13.148,-35.71L133.245,100 133.245,62.727Z"
+        android:strokeLineJoin="round"
+        android:strokeWidth="0"
+        android:fillColor="#ffae00"
+        android:strokeColor="#00000000"
+        android:strokeLineCap="round"/>
+    <path
+        android:pathData="m28.06,62.727v37.274,35.71c0,0 -0.272,35.71 13.148,35.71h13.148,26.296 26.296,13.148c13.42,0 13.148,-35.71 13.148,-35.71L133.245,100 133.245,62.727Z"
+        android:strokeLineJoin="round"
+        android:strokeWidth="0"
+        android:fillColor="#ffae00"
+        android:strokeColor="#00000000"
+        android:strokeLineCap="round"/>
+    <path
+        android:pathData="M28.06,28.58L28.06,62.727L133.245,62.727L133.245,28.58Z"
+        android:strokeLineJoin="round"
+        android:strokeWidth="0"
+        android:fillColor="#ffffff"
+        android:strokeColor="#00000000"
+        android:strokeLineCap="round"/>
+    <path
+        android:pathData="m28.061,28.58v71.42,35.71c0,0 -0.272,35.71 13.148,35.71h13.148,26.296 26.296,13.148c13.42,0 13.148,-35.71 13.148,-35.71L133.245,100 133.245,28.58ZM133.606,51.543v83.828h19.167c13.216,0 17.327,-7.857 19.167,-20.957L171.941,93.457 171.941,51.543Z"
+        android:strokeLineJoin="round"
+        android:strokeWidth="9.48164"
+        android:fillColor="#00000000"
+        android:strokeColor="#000000"
+        android:strokeLineCap="round"/>
+    <path
+        android:pathData="m46.371,71.311a4.318,4.052 0,0 0,-4.315 4.052,4.318 4.052,0 0,0 4.318,4.052 4.318,4.052 0,0 0,4.318 -4.052,4.318 4.052,0 0,0 -4.318,-4.052zM61.961,77.878a4.318,4.052 0,0 0,-4.315 4.052,4.318 4.052,0 0,0 4.318,4.052 4.318,4.052 0,0 0,4.318 -4.052,4.318 4.052,0 0,0 -4.318,-4.052zM112.377,78.133a4.318,4.052 0,0 0,-4.315 4.052,4.318 4.052,0 0,0 4.318,4.052 4.318,4.052 0,0 0,4.318 -4.052,4.318 4.052,0 0,0 -4.318,-4.052zM88.131,86.337a4.318,4.052 0,0 0,-4.315 4.052,4.318 4.052,0 0,0 4.318,4.052 4.318,4.052 0,0 0,4.318 -4.052,4.318 4.052,0 0,0 -4.318,-4.052zM45.208,94.779a4.318,4.052 0,0 0,-4.315 4.052,4.318 4.052,0 0,0 4.318,4.052 4.318,4.052 0,0 0,4.318 -4.052,4.318 4.052,0 0,0 -4.318,-4.052zM110.342,102.693a4.318,4.052 0,0 0,-4.315 4.052,4.318 4.052,0 0,0 4.318,4.052 4.318,4.052 0,0 0,4.318 -4.052,4.318 4.052,0 0,0 -4.318,-4.052zM75.628,107.895a4.318,4.052 0,0 0,-4.315 4.052,4.318 4.052,0 0,0 4.318,4.052 4.318,4.052 0,0 0,4.318 -4.052,4.318 4.052,0 0,0 -4.318,-4.052zM82.718,127.525a4.318,4.052 0,0 0,-4.315 4.052,4.318 4.052,0 0,0 4.318,4.052 4.318,4.052 0,0 0,4.318 -4.052,4.318 4.052,0 0,0 -4.318,-4.052zM105.399,127.525a4.318,4.052 0,0 0,-4.315 4.052,4.318 4.052,0 0,0 4.318,4.052 4.318,4.052 0,0 0,4.318 -4.052,4.318 4.052,0 0,0 -4.318,-4.052zM54.513,129.163a4.318,4.052 0,0 0,-4.315 4.052,4.318 4.052,0 0,0 4.318,4.052 4.318,4.052 0,0 0,4.318 -4.052,4.318 4.052,0 0,0 -4.318,-4.052zM117.611,147.173a4.318,4.052 0,0 0,-4.315 4.052,4.318 4.052,0 0,0 4.318,4.052 4.318,4.052 0,0 0,4.318 -4.052,4.318 4.052,0 0,0 -4.318,-4.052zM70.215,149.902a4.318,4.052 0,0 0,-4.315 4.052,4.318 4.052,0 0,0 4.318,4.052 4.318,4.052 0,0 0,4.318 -4.052,4.318 4.052,0 0,0 -4.318,-4.052z"
+        android:strokeLineJoin="round"
+        android:strokeWidth="0"
+        android:fillColor="#ffe680"
+        android:strokeColor="#00000000"
+        android:fillAlpha="0.543478"
+        android:strokeLineCap="round"/>
 </vector>
