Add SplashScreen and color from V3

--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,18 +1,15 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <!-- Base application theme. -->
-    <style name="Theme.Cheers" parent="Theme.MaterialComponents.DayNight.NoActionBar">
-        <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_200</item>
-        <item name="colorPrimaryVariant">@color/purple_700</item>
+    <style name="Theme.Cheers.Base.Dark" parent="Theme.Cheers.Base">
         <item name="colorOnPrimary">@color/black</item>
-        <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/teal_200</item>
-        <item name="colorSecondaryVariant">@color/teal_200</item>
         <item name="colorOnSecondary">@color/black</item>
-        <!-- Status bar color. -->
-        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
-        <!-- Customize your theme here. -->
+    </style>
 
-        <item name="colorSecondaryTransparent">#8803DAC5</item>
+    <style name="Theme.Cheers.Default" parent="Theme.Cheers.Base.Dark">
+        <item name="colorPrimary">@color/dark_colorPrimary</item>
+        <item name="colorPrimaryVariant">@color/dark_colorPrimaryVariant</item>
+
+        <item name="colorSecondary">@color/dark_colorSecondary</item>
+        <item name="colorSecondaryVariant">@color/dark_colorSecondaryVariant</item>
+        <item name="colorSecondaryTransparent">@color/dark_colorSecondaryTransparent</item>
     </style>
 </resources>
