--- a/app/src/main/res/layout/fragment_category.xml
+++ b/app/src/main/res/layout/fragment_category.xml
@@ -18,17 +18,17 @@
         <FrameLayout
             android:id="@+id/bottomSheet"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             app:behavior_fitToContents="false"
             app:behavior_hideable="false"
             app:behavior_skipCollapsed="true"
+            android:background="?colorSurface"
             app:layout_behavior="@string/bottom_sheet_behavior">
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/countersRecyclerView"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="?colorSurface" />
+                android:layout_height="match_parent" />
         </FrameLayout>
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
