Add "Select all" menu item to CategoryFragment

--- a/app/src/main/res/menu/counters_menu.xml
+++ b/app/src/main/res/menu/counters_menu.xml
@@ -3,6 +3,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
+        android:id="@+id/selectAllMenuItem"
+        android:title="@string/select_all_menu_item"
+        android:icon="@drawable/ic_select_all"
+        app:showAsAction="ifRoom" />
+
+    <item
         android:id="@+id/stopCounterMenuItem"
         android:title="@string/stop_counter_menu_item"
         android:icon="@drawable/ic_stop"
