--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,7 +29,7 @@
                 android:id="@+id/navHostFragment"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
-                android:name="androidx.navigation.fragment.NavHostFragment"
+                android:name="cz.johnyapps.cheers.global.fragments.BackSupportNavHostFragment"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/toolbar"
                 app:layout_constraintEnd_toEndOf="parent"
